--- a/index.html
+++ b/index.html
@@ -10,24 +10,31 @@
 
 <body>
     <section class="reg-form">
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create an account!</p>
+        <h1 class="title">Sign Up</h1>
+        <p class="info">Kindly register below to benefit from taltech training!</p>
         <hr>
         <form action="" method="post">
-            <div class="form-data">
-                <input type="text" name="fname" id="fname" placeholder="First Name">
-                <input type="text" name="lname" id="lname" placeholder="Last Name">
-                <input type="email" name="email" id="email" placeholder="Email">
-                <input type="password" name="pwd" id="pwd" placeholder="Password">
-                <input type="password" name="confirm_pwd" id="confirm_pwd" placeholder="Confirm Password">
-                <input type="checkbox" name="terms" id="terms">
-                <p>I accept the <a href="#">Terms of Use</a> & <a href="#">Privacy Policy.</a></p><br>
-                <button class="button">Sign Up</button>
+            <div class="user_field">
+                <input type="text" name="fname" id="fname" placeholder="First Name" autocomplete="fname" pattern="^[a-zA-Z]{2,}$" required>
+                <input type="text" name="lname" id="lname" placeholder="Last Name" autocomplete="lname" pattern="^[a-zA-Z]{2,}$" required>
             </div>
+            <div class="email_field">
+                <input type="email" name="email" id="email" placeholder="name@example.com" autocomplete="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+            </div>
+            <div class="pwd_field">
+                <input type="password" name="pwd" id="pwd" placeholder="Password" autocomple="new-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
+                    required>
+                <input type="password" name="confirm_pwd" id="confirm_pwd" placeholder="Confirm Password" autocomplete="new-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
+                    required>
+            </div>
+            <input type="checkbox" name="terms" id="terms" required>
+            <p class="check_agreement">I accept the <a href="#">Terms of Use</a> & <a href="#">Privacy Policy.</a></p><br>
+            <button class="button" disable>Sign Up</button>
         </form>
     </section>
-    <p>Already have an account? <a href="#">Login here.</a></p>
+    <p class="login">Already have an account? <a href="#">Login here.</a></p>
 
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="script.js"></script>
 </body>
 
