--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Login | Sign Up</title>
+    <link rel="stylesheet" href="css/signup_style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <title>Taltech | Sign Up</title>
 </head>
 
 <body>
@@ -29,12 +30,12 @@
             </div>
             <input type="checkbox" name="terms" id="terms" required>
             <p class="check_agreement">I accept the <a href="#">Terms of Use</a> & <a href="#">Privacy Policy.</a></p><br>
-            <button class="button" disable>Sign Up</button>
+            <input type="submit" value="Sign Up" class="button" disable></input>
         </form>
     </section>
-    <p class="login">Already have an account? <a href="#">Login here.</a></p>
+    <p class="login">Already have an account? <a href="login.html">Login here.</a></p>
 
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
     <script src="script.js"></script>
 </body>
 
