--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <img src="img/loogin.svg" alt="">
         </div>
         <div class="login-container">
-            <form action="index.html" method="post">
+            <form action="" method="get">
                 <img class="avatar" src="img/avatar.svg" alt="avatar">
                 <h2>Welcome</h2>
                 <div class="input-div one">
